[package]
name = "weylus"
version = "0.11.4"
authors = ["HMH <henry@freedesk.net>"]
license = "AGPL-3.0-or-later"
edition = "2021"
description = "Use your iPad or Android tablet as graphic tablet."

[dependencies]
autopilot = { git = "https://github.com/H-M-H/autopilot-rs.git", rev = "63eed09c715bfb665bb23172a3930a528e11691c" }
bitflags = { version = "^2.6", features = ["serde"] }
bytes = "1.7.1"
clap = { version = "4.5.18", features = ["derive"] }
clap_complete = "4.5.29"
dirs = "^5.0"
fastwebsockets = { version = "0.8.0", features = ["upgrade", "unstable-split"] }
fltk = { version = "^1.5", features = ["use-wayland"] }
fltk-theme = "^0.7.9"
handlebars = "^6.1"
http-body-util = "0.1.2"
hyper = { version = "^1.4", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1.8", features = ["tokio"] }
image = { version = "^0.25", features = ["png"], default-features = false }
image_autopilot = { package = "image", version = "0.22.5", features = [], default-features = false }
percent-encoding = "2.1.0"
qrcode = "0.14.0"
rand = "0.8.5"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
signal-hook = "0.3.17"
tokio = { version = "^1", features = ["fs", "macros", "rt-multi-thread", "sync", "net"] }
toml = "^0.9"
tracing = "^0.1"
tracing-subscriber = { version = "^0.3", features = ["ansi", "json"], default-features = false }
url = "^2.5"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["d3d11", "d3dcommon", "dxgi", "dxgi1_2", "dxgitype"] }
wio = "0.2.2"
captrs = "^0.3.1"

[build-dependencies]
cc = "^1.1"
num_cpus = "^1.16"

[target.'cfg(target_os = "linux")'.dependencies]
dbus = "^0.9"
gstreamer = "^0.24"
gstreamer-app = { version = "^0.24", features = ["v1_16"] }
gstreamer-video = "^0.24"

[target.'cfg(not(target_os = "windows"))'.dependencies]
pnet_datalink = "^0.35"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "^0.10"
core-graphics = "^0.24"

[features]
bench = []
ffmpeg-system = []
va-static = []

[package.metadata.bundle]
name = "Weylus"
identifier = "io.github.h-m-h.weylus"

[package.metadata.deb]
name = "Weylus"
section = "graphics"
priority = "optional"
assets = [
    ["target/release/weylus", "usr/bin/weylus", "755"],
    ["weylus.desktop", "usr/share/applications/weylus.desktop", "755"],
    ["Readme.md", "usr/share/doc/weylus/README", "644"],
]

[profile.release]
lto = true
opt-level = 3
